REFACTOR:(Login): Implemented unified auth form
- coded unified login / register form based on roles

--- a/src/stylus/App.styl
+++ b/src/stylus/App.styl
@@ -2,6 +2,6 @@
 
 @import "includes/fonts"
 @import "includes/normalize"
-@import "includes/colors"
+@import "includes/variables"
 @import "includes/globals"
 @import "includes/components/*"
