--- a/src/stylus/includes/fonts.styl
+++ b/src/stylus/includes/fonts.styl
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab&display=swap')
+@import url("https://use.typekit.net/ltm0owv.css")
