--- a/src/stylus/includes/globals.styl
+++ b/src/stylus/includes/globals.styl
@@ -2,7 +2,7 @@
 	font-family 'Roboto', sans-serif
 
 h1
-	font-family 'Roboto Slab', serif
+	font-family freight-text-pro, serif
 	//margin-bottom 2rem
 	//margin-top 0
 	
@@ -11,7 +11,7 @@ p
 
 input, button, textarea, &.button
 	border 4px solid primary
-	border-radius 0
+	border-radius radius
 	box-sizing border-box
 	font-size 1.25rem
 	margin-right 5px
@@ -25,9 +25,9 @@ input, button, textarea, &.button
 
 input, textarea
 	background-color #f0f0f0
-	border-radius 0
+	border-radius radius
 	outline 0
 	width 100%
 	&:focus
 		background-color white
-		border-color green
+		border-color border-color
