FEATURE:(Quotes): Quotes presentation
- coded presentation quotes & quote card

--- a/src/stylus/includes/components/header.styl
+++ b/src/stylus/includes/components/header.styl
@@ -1,7 +1,7 @@
 header
 	&#header
 		&.header
-			background-color white
+			//background-color white
 			//padding 0 2rem
 			text-align center
 			width 100%
@@ -10,7 +10,7 @@ header
 	header
 		&#header
 			&.header
-				border-bottom 2px solid #e1e1e1
+				//border-bottom 2px solid #e1e1e1
 				display flex
 				justify-content center
 				//margin-bottom 1rem
