--- a/src/stylus/includes/components/cards.styl
+++ b/src/stylus/includes/components/cards.styl
@@ -1,10 +1,10 @@
-.cards-movies
+.cards-quotes
 	display grid
 	grid-template-columns repeat(2, 1fr)
 	gap 10px
 	a
 		text-decoration none
-		&.card-movie
+		&.card-quote
 			background-color white
 			border-radius 4px
 			box-shadow 0 12.1px 10px rgba(0, 0, 0, 0.065), 0 97px 80px rgba(0, 0, 0, 0.07)
