--- a/src/stylus/includes/components/forms.styl
+++ b/src/stylus/includes/components/forms.styl
@@ -1,4 +1,4 @@
-.form-login
+.form-container
 	border-radius 4px
 	box-shadow 0 12.1px 10px rgba(0, 0, 0, 0.035), 0 97px 80px rgba(0, 0, 0, 0.07)
 	overflow hidden
