STYLE:(Layout): Styling for globals & forms

--- a/src/stylus/includes/components/forms.styl
+++ b/src/stylus/includes/components/forms.styl
@@ -2,6 +2,8 @@
 	border-radius 4px
 	box-shadow 0 12.1px 10px rgba(0, 0, 0, 0.035), 0 97px 80px rgba(0, 0, 0, 0.07)
 	overflow hidden
+	.form-header
+		text-align center
 	form
 		background-color white
 		padding 2rem
