--- a/src/stylus/includes/components/buttons.styl
+++ b/src/stylus/includes/components/buttons.styl
@@ -2,7 +2,7 @@
 	display flex
 	align-items center
 	justify-content center
-	margin-top 2rem
+	//margin-top 2rem
 	&.no-margin
 		margin 0
 	&.form
