--- a/src/stylus/includes/components/container.styl
+++ b/src/stylus/includes/components/container.styl
@@ -3,4 +3,10 @@
 	//width 100vw
 	//margin 0 auto
 	box-sizing border-box
+	height auto
 	padding 1rem
+	&.flex-centered
+		display flex
+		flex-direction column
+		justify-content center
+		height 100%
