--- a/src/stylus/includes/components/header.styl
+++ b/src/stylus/includes/components/header.styl
@@ -1,7 +1,7 @@
 header
 	&#header
 		&.header
-			//background-color white
+			background-color white
 			//padding 0 2rem
 			text-align center
 			width 100%
