--- a/src/stylus/includes/components/root.styl
+++ b/src/stylus/includes/components/root.styl
@@ -7,8 +7,12 @@
 	//height 100%
 	.App
 		box-sizing border-box
+		display flex
+		flex-direction column
 		//padding 2rem
+		height 100vh
 		width 100%
+		justify-content space-between
 		
 +above(l)
 	#root
