STYLE:(Conatiner & Sections):
- coded some styles for consistent presentation

--- a/src/stylus/includes/globals.styl
+++ b/src/stylus/includes/globals.styl
@@ -1,8 +1,8 @@
 *
 	font-family 'Roboto', sans-serif
 
-h1
-	font-family freight-text-pro, serif
+//h1
+//	font-family freight-text-pro, serif
 	//margin-bottom 2rem
 	//margin-top 0
 	
