--- a/src/stylus/includes/components/branding.styl
+++ b/src/stylus/includes/components/branding.styl
@@ -1,3 +1,9 @@
 #branding
-	h1
-		margin 1rem
+	&.branding
+		span
+			display block
+			//margin 1rem
+			font-family freight-text-pro, serif
+			font-size 2.5rem
+			font-weight bold
+			margin 1rem 0
