--- a/src/stylus/includes/components/section.styl
+++ b/src/stylus/includes/components/section.styl
@@ -1,3 +1,9 @@
 section
 	&.section-container
 		height auto
+		&.flex-centered
+			display flex
+			flex-direction column
+			justify-content center
+			align-items center
+			height 100%
