--- a/src/stylus/includes/components/root.styl
+++ b/src/stylus/includes/components/root.styl
@@ -12,7 +12,7 @@
 		//padding 2rem
 		height 100vh
 		width 100%
-		justify-content space-between
+		//justify-content space-between
 		
 +above(l)
 	#root
