--- a/src/stylus/includes/components/footer.styl
+++ b/src/stylus/includes/components/footer.styl
@@ -1,7 +1,10 @@
 footer
 	&#footer
 		&.footer
+			bottom 0
+			box-sizing border-box
 			display flex
 			justify-content center
 			align-items center
 			padding 1rem
+			width 100%
