--- a/src/stylus/includes/globals.styl
+++ b/src/stylus/includes/globals.styl
@@ -1,5 +1,9 @@
 *
 	font-family 'Roboto', sans-serif
+	
+html, body
+	height 100%
+//	padding-bottom 95px
 
 //h1
 //	font-family freight-text-pro, serif
