--- a/src/stylus/includes/components/body.styl
+++ b/src/stylus/includes/components/body.styl
@@ -1,11 +1,11 @@
 body
 	background-color #fafafa
-	background-size cover
+	//background-size cover
 	//background-image url("../assets/architecture-room-indoors-auditorium-109669.jpg")
 	//background-size 65%
-	background-position bottom right
-	background-repeat no-repeat
-	position relative
+	//background-position bottom right
+	//background-repeat no-repeat
+	//position relative
 	//&:before
 	//	content ''
 	//	background-color rgba(255, 255, 255 .9)
@@ -14,7 +14,7 @@ body
 	//	height 100%
 	//	z-index -1
 		
-+above(l)
-	body
-		&:before
-			height 100vh
+//+above(l)
+//	body
+//		&:before
+//			height 100vh
