--- a/src/stylus/includes/components/root.styl
+++ b/src/stylus/includes/components/root.styl
@@ -1,8 +1,8 @@
 #root
 	display flex
-	flex-flow column wrap
-	justify-content flex-start
-	align-items center
+	//flex-flow column wrap
+	//justify-content flex-start
+	//align-items center
 	//width 100vw
 	//height 100%
 	.App
