--- a/src/stylus/includes/components/content.styl
+++ b/src/stylus/includes/components/content.styl
@@ -1,4 +1,4 @@
-main
-	&#main-content
-		&.main-content
-			min-height calc(100% - 173px)
+//main
+//	&#main-content
+//		&.main-content
+//			min-height calc(100% - 173px)
