--- a/src/stylus/includes/components/root.styl
+++ b/src/stylus/includes/components/root.styl
@@ -10,7 +10,7 @@
 		display flex
 		flex-direction column
 		//padding 2rem
-		//height 100vh
+		height 100vh
 		width 100%
 		//justify-content space-between
 		
