--- a/src/stylus/includes/components/root.styl
+++ b/src/stylus/includes/components/root.styl
@@ -1,5 +1,5 @@
 #root
-	display flex
+	//display flex
 	//flex-flow column wrap
 	//justify-content flex-start
 	//align-items center
@@ -10,7 +10,7 @@
 		display flex
 		flex-direction column
 		//padding 2rem
-		height 100vh
+		//height 100vh
 		width 100%
 		//justify-content space-between
 		
