--- a/src/stylus/includes/components/body.styl
+++ b/src/stylus/includes/components/body.styl
@@ -5,7 +5,7 @@ body
 	//background-size 65%
 	//background-position bottom right
 	//background-repeat no-repeat
-	//position relative
+	position relative
 	//&:before
 	//	content ''
 	//	background-color rgba(255, 255, 255 .9)
