--- a/src/stylus/includes/components/root.styl
+++ b/src/stylus/includes/components/root.styl
@@ -4,7 +4,7 @@
 	//justify-content flex-start
 	//align-items center
 	//width 100vw
-	//height 100%
+	height 100vh
 	.App
 		box-sizing border-box
 		display flex
