--- a/src/stylus/includes/components/body.styl
+++ b/src/stylus/includes/components/body.styl
@@ -5,6 +5,7 @@ body
 	//background-size 65%
 	//background-position bottom right
 	//background-repeat no-repeat
+	height 100vh
 	position relative
 	//&:before
 	//	content ''
