--- a/src/stylus/includes/components/container.styl
+++ b/src/stylus/includes/components/container.styl
@@ -3,7 +3,7 @@
 	//width 100vw
 	//margin 0 auto
 	box-sizing border-box
-	height 100vh
+	//height 100vh
 	padding 1rem
 	&.flex-centered
 		display flex
