--- a/src/stylus/includes/components/branding.styl
+++ b/src/stylus/includes/components/branding.styl
@@ -1,9 +1,10 @@
 #branding
 	&.branding
+		box-sizing border-box
+		padding 1rem 0
 		span
 			display block
 			//margin 1rem
 			font-family freight-text-pro, serif
 			font-size 2.5rem
 			font-weight bold
-			margin 1rem 0
