--- a/src/stylus/includes/components/root.styl
+++ b/src/stylus/includes/components/root.styl
@@ -1,23 +1,15 @@
 #root
-	//display flex
-	//flex-flow column wrap
-	//justify-content flex-start
-	//align-items center
-	//width 100vw
-	//height 100vh
+	height 100vh
+	position absolute
+	top 0
+	right 0
+	bottom 0
+	left 0
 	.App
 		box-sizing border-box
-		display flex
-		flex-direction column
-		//padding 2rem
-		//height 100vh
 		width 100%
-		//justify-content space-between
 		
 +above(l)
 	#root
-		//width 100vw
-		//height 100vh
 		.App
 			padding 0
-			//width 1080px
