--- a/src/stylus/includes/components/header.styl
+++ b/src/stylus/includes/components/header.styl
@@ -2,21 +2,21 @@ header
 	&#header
 		&.header
 			background-color white
-			//padding 0 2rem
+			position absolute
 			text-align center
 			width 100%
 			
-+above(l)
-	header
-		&#header
-			&.header
-				//border-bottom 2px solid #e1e1e1
-				display flex
-				justify-content center
-				//margin-bottom 1rem
-				padding 0.5rem 0
-				.container
-					display flex
-					align-items center
-					justify-content center
-					text-align center
+//+above(l)
+//	header
+//		&#header
+//			&.header
+//				//border-bottom 2px solid #e1e1e1
+//				display flex
+//				justify-content center
+//				//margin-bottom 1rem
+//				padding 0.5rem 0
+//				.container
+//					display flex
+//					align-items center
+//					justify-content center
+//					text-align center
