FIX:(Height):Possible fix for unintended scrolling
- made header absolute position
- set root / app selectors 100vh height

--- a/src/stylus/includes/shortcodes.styl
+++ b/src/stylus/includes/shortcodes.styl
@@ -4,5 +4,6 @@ section
 		flex-direction column
 		justify-content center
 		align-items center
+	&.is-full-height
 		height 100vh
-	
+		overflow hidden
