FIX:(Height):Possible fix for unintended scrolling
- made every container / wrapper div 100% height

--- a/src/stylus/includes/globals.styl
+++ b/src/stylus/includes/globals.styl
@@ -1,6 +1,8 @@
 *
 	font-family 'Roboto', sans-serif
 	
+html, body
+	height 100%
 //h1
 //	font-family freight-text-pro, serif
 	//margin-bottom 2rem
