--- a/src/stylus/includes/components/root.styl
+++ b/src/stylus/includes/components/root.styl
@@ -6,9 +6,11 @@
 	bottom 0
 	left 0
 	overflow hidden
+	height 100%
 	.App
 		box-sizing border-box
 		width 100%
+		height 100%
 		
 +above(l)
 	#root
