FEATURE:(Actions): Log Out function
- Log out button functional & redirects to front page

--- a/src/stylus/includes/components/actions.styl
+++ b/src/stylus/includes/components/actions.styl
@@ -1,4 +1,19 @@
 div
 	.fab-container
-		bottom 6vh
-		right 6vw
+		bottom 4vh
+		right 4vw
+		button
+			&.action
+				height 66px
+				width 66px
+			&.fab-rotate
+				&:active,
+				&:focus,
+				&:hover
+					border-radius 50%
+		&:hover
+			a
+				&.fab-item
+					&:not(:last-child)
+						height 50px
+						width 50px
