--- a/src/stylus/includes/shortcodes.styl
+++ b/src/stylus/includes/shortcodes.styl
@@ -7,3 +7,6 @@ section
 	&.is-full-height
 		height 100%
 		overflow hidden
+	&.is-grid
+		display grid
+		grid-template-columns repeat(auto-fill, minmax(300px, 1fr))
