--- a/src/stylus/includes/globals.styl
+++ b/src/stylus/includes/globals.styl
@@ -8,6 +8,9 @@ html, body
 	//margin-bottom 2rem
 	//margin-top 0
 	
+h1, h2, h3, h4, h5, h6
+	font-family 'Roboto Condensed', sans-serif
+	
 p
 	font-size 1.25rem
 
