--- a/src/stylus/includes/globals.styl
+++ b/src/stylus/includes/globals.styl
@@ -15,8 +15,8 @@ p
 	font-size 1.25rem
 
 input, button, textarea, &.button
-	border 4px solid primary
-	border-radius radius
+	border 4px solid shade
+	//border-radius radius
 	box-sizing border-box
 	font-size 1.25rem
 	margin-right 5px
@@ -29,8 +29,8 @@ input, button, textarea, &.button
 		width auto
 
 input, textarea
-	background-color #f0f0f0
-	border-radius radius
+	background-color light
+	//border-radius radius
 	outline 0
 	width 100%
 	&:focus
