--- a/src/stylus/includes/variables.styl
+++ b/src/stylus/includes/variables.styl
@@ -1,5 +1,17 @@
 // COLORS
-primary = #c9
+primary 		= #F94B71
+secondary		= #B5D99C
+tertiary		= #2B75F6
+quaternary	= #FFA552
+
+light				= #f0f0f0
+shade				= #C9C9C9
+
+default			= shade
+success			= #49cc49
+error				= #f79c9c
+warning			= #ecec72
+
 
 // BORDERS
 radius				= 4px
