--- a/src/stylus/includes/components/buttons.styl
+++ b/src/stylus/includes/components/buttons.styl
@@ -18,18 +18,19 @@
 		color white
 		width 100%
 		&.outline
-			border 4px solid #f79c9c
+			border 4px solid error
 			border-radius 4px
-			background-color #f79c9c
+			background-color white
+			color error
 			font-size 1.25rem
 			padding .5rem
 			&:hover
-				border-color darken(#f79c9c, 25%)
-				background-color darken(#f79c9c, 25%)
+				border-color darken(error, 25%)
+				background-color darken(error, 25%)
 
 
 button, &.button
-	background-color primary
+	background-color shade
 	color white
 	&:hover
 		background-color #808080
@@ -37,8 +38,7 @@ button, &.button
 	&:focus
 		background-color green
 		border 4px solid green
-		border-radius 0
-		color #fff
+		//border-radius radius
 		outline 0
 	&.button-clear
 		&:focus
