--- a/src/stylus/includes/components/forms.styl
+++ b/src/stylus/includes/components/forms.styl
@@ -18,7 +18,7 @@
 		//margin-bottom 2rem
 		&.card-form
 			border-radius 0
-			box-shadow 0
+			box-shadow none
 			overflow hidden
 			padding 0
 		label
