STYLE:(Modal): Styled Add Form
- removed box-shadow in form
- removed border around modal
- adjusted padding around form

--- a/src/stylus/includes/components/forms.styl
+++ b/src/stylus/includes/components/forms.styl
@@ -16,7 +16,8 @@
 		overflow hidden
 		padding 2rem
 		//margin-bottom 2rem
-		&.card-form
+		&.card-form,
+		&.modal-form
 			border-radius 0
 			box-shadow none
 			overflow hidden
