--- a/src/stylus/includes/components/modal.styl
+++ b/src/stylus/includes/components/modal.styl
@@ -9,8 +9,10 @@ body
 				justify-content center
 				align-items center
 				.ReactModal__Content
+					border 0 !important
 					top auto !important
 					bottom auto !important
+					padding 1.5rem 1.75rem 1.75rem !important
 					.form-container
 						form
 							padding 0
