STYLE:(Modal): Styled Add Form
- removed box-shadow in form
- removed border around modal
- adjusted padding around form

--- a/src/stylus/includes/components/modal.styl
+++ b/src/stylus/includes/components/modal.styl
@@ -10,8 +10,11 @@ body
 				align-items center
 				.ReactModal__Content
 					border 0 !important
+					border-radius 0 !important
 					top auto !important
+					right 1rem !important
 					bottom auto !important
+					left 1rem !important
 					padding 1.5rem 1.75rem 1.75rem !important
 					.form-container
 						form
