--- a/src/stylus/includes/components/branding.styl
+++ b/src/stylus/includes/components/branding.styl
@@ -3,8 +3,9 @@
 		box-sizing border-box
 		padding 1rem 0
 		span
-			display block
-			//margin 1rem
-			font-family freight-text-pro, serif
-			font-size 2.5rem
-			font-weight bold
+			h1
+				display block
+				margin 0
+				font-family freight-text-pro, serif
+				font-size 2.5rem
+				font-weight bold
