--- a/src/stylus/includes/components/forms.styl
+++ b/src/stylus/includes/components/forms.styl
@@ -29,6 +29,9 @@
 			border-color default
 			background-color default
 			width 100%
+			&.success
+				background-color success
+				border-color success
 		&:nth-child
 			margin-bottom 1rem
 +above(l)
