--- a/src/stylus/includes/components/buttons.styl
+++ b/src/stylus/includes/components/buttons.styl
@@ -36,11 +36,14 @@ button, &.button
 		background-color #808080
 		border-color #808080
 	&:focus
-		background-color green
-		border 4px solid green
+		background-color tertiary
+		border 4px solid tertiary
 		//border-radius radius
 		outline 0
 	&.button-clear
 		&:focus
 			background-color red
 			border-color red
+	&.success
+		background-color success
+		border-color success
