--- a/src/stylus/includes/components/body.styl
+++ b/src/stylus/includes/components/body.styl
@@ -1,5 +1,6 @@
 body
-	background-color #fafafa
+	//background-color #fafafa
+	background-color white
 	box-sizing border-box
 	//background-size cover
 	//background-image url("../assets/architecture-room-indoors-auditorium-109669.jpg")
