FIX:(Forms): Form resets
- fixed forms retaining values after submitting

--- a/src/stylus/includes/components/buttons.styl
+++ b/src/stylus/includes/components/buttons.styl
@@ -24,9 +24,11 @@
 			color error
 			font-size 1.25rem
 			padding .5rem
-			&:hover
+			&:hover,
+			&:focus
 				border-color darken(error, 25%)
 				background-color darken(error, 25%)
+				color white
 
 
 button, &.button
