--- a/src/stylus/includes/components/forms.styl
+++ b/src/stylus/includes/components/forms.styl
@@ -32,6 +32,10 @@
 			&.success
 				background-color success
 				border-color success
+			&:hover,
+			&:focus
+				background-color darken(success, 25%)
+				border-color darken(success, 25%)
 		&:nth-child
 			margin-bottom 1rem
 +above(l)
