STYLE:(Card): Padding
- adjusted top padding to keep card from being cluttered

--- a/src/stylus/includes/components/cards.styl
+++ b/src/stylus/includes/components/cards.styl
@@ -24,7 +24,7 @@
 				.card-body
 					//background-color white
 					color black
-					padding 2rem
+					padding 2.25rem 2rem 2rem
 					&.body-form
 						padding 1.25rem
 					p
