FEATURE:(Action): Back button
- added a back button to actions that backs to previous page

--- a/src/stylus/includes/components/actions.styl
+++ b/src/stylus/includes/components/actions.styl
@@ -9,7 +9,8 @@ div
 				&:focus,
 				&:hover
 					border-radius 50%
-			&.action-fab
+			&.action-fab,
+			&.link-back
 				background-color tertiary !important
 				height 66px
 				width 66px
