--- a/src/stylus/includes/components/branding.styl
+++ b/src/stylus/includes/components/branding.styl
@@ -1,12 +1,14 @@
 #branding
 	&.branding
 		box-sizing border-box
-		padding 1.5rem 0
+		padding 1.5rem
 		display flex
 		justify-content center
 		align-items center
 		line-height normal
 		position relative
+		//&.spaced
+		//	margin-left 52px
 		span
 			&.brand-logo
 				display block
