--- a/src/stylus/includes/components/forms.styl
+++ b/src/stylus/includes/components/forms.styl
@@ -5,10 +5,10 @@
 	//overflow hidden
 	form
 		background-color white
-		border-radius radius
+		border-radius 0
 		box-shadow 0 12.1px 10px rgba(0, 0, 0, 0.035), 0 97px 80px rgba(0, 0, 0, 0.07)
 		overflow hidden
-		padding 2rem
+		padding 1.5rem
 		//margin-bottom 2rem
 		&.card-form,
 		&.modal-form
