STYLE:(Adjustments): Styling
- added more styles to login / register forms
- added cancel button to login / register

--- a/src/stylus/includes/components/forms.styl
+++ b/src/stylus/includes/components/forms.styl
@@ -20,10 +20,10 @@
 			color black
 			display block
 			margin-bottom 0.8rem
-		input, button
-			//border-color default
-		textarea
-			//border-color primary
+		//input, button
+		//	border-color default
+		//textarea
+		//	border-color primary
 		button,
 		.button
 			border-color default
