--- a/src/stylus/includes/components/buttons.styl
+++ b/src/stylus/includes/components/buttons.styl
@@ -19,7 +19,7 @@
 		width 100%
 		&.outline
 			border 4px solid error
-			border-radius 4px
+			border-radius 0
 			background-color white
 			color error
 			font-size 1.25rem
