--- a/src/stylus/includes/components/cards.styl
+++ b/src/stylus/includes/components/cards.styl
@@ -17,6 +17,10 @@
 			//overflow hidden
 			.card-container
 				z-index 1
+				display flex
+				flex-direction column
+				height 100%
+				justify-content space-between
 				.card-header
 					h2
 						margin-top 0
